--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -4,5 +4,5 @@ nodaemon=true
 [program:nginx]
 command=/usr/sbin/nginx
 
-[program:php5-fmp]
-/etc/php5/fpm
+[program:php5-fpm]
+command = /usr/sbin/php5-fpm
